--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="main">
       <header>
         <div class="container">
-          <img src="./../ur/Frame.png" alt="" />
+          <img src="./ur/Frame.png" alt="" />
 
           <div class="menu">
             <a href="">Product</a>
@@ -25,9 +25,9 @@
             <a href="">Shop</a>
           </div>
           <div class="korzina">
-            <img src="./../ur/fravm1.jpg" alt="" />
+            <img src="./ur/fravm1.jpg" alt="" />
             <a href="">SHOWROOMS</a>
-            <img src="./../ur/frame3.jpg" alt="" />
+            <img src="./ur/frame3.jpg" alt="" />
           </div>
         </div>
       </header>
@@ -47,19 +47,19 @@
     <section class="rooms">
       <div class="container">
         <div>
-          <img src="./../ur/frame5.jpg" alt="" />
+          <img src="./ur/frame5.jpg" alt="" />
           <p>Phone Booth</p>
         </div>
         <div>
-          <img src="./../ur/frame6.jpg" alt="" />
+          <img src="./ur/frame6.jpg" alt="" />
           <p>Focus Room</p>
         </div>
         <div>
-          <img src="./../ur/frame7.jpg" alt="" />
+          <img src="./ur/frame7.jpg" alt="" />
           <p>Meeting Room</p>
         </div>
         <div>
-          <img src="./../ur/frame8.jpg" alt="" />
+          <img src="./ur/frame8.jpg" alt="" />
           <p>Open Meeting Room</p>
         </div>
       </div>
@@ -70,24 +70,24 @@
         <h1>The world's leading brands choose ROOM.</h1>
         <p>Over 3,000 and counting.</p>
         <div class="brand">
-          <img src="./../ur/1.jpg" alt="" />
-          <img src="./../ur/2.jpg" alt="" />
-          <img src="./../ur/3.jpg" alt="" />
-          <img src="./../ur/4.jpg" alt="" />
-          <img src="./../ur/5.jpg" alt="" />
-          <img src="./../ur/6.jpg" alt="" />
-          <img src="./../ur/7.jpg" alt="" />
-          <img src="./../ur/8.jpg" alt="" />
-          <img src="./../ur/9.jpg" alt="" />
-          <img src="./../ur/10.jpg" alt="" />
-          <img src="./../ur/11.jpg" alt="" />
-          <img src="./../ur/12.jpg" alt="" />
-          <img src="./../ur/13.jpg" alt="" />
-          <img src="./../ur/14.jpg" alt="" />
-          <img src="./../ur/15.jpg" alt="" />
-          <img src="./../ur/16.jpg" alt="" />
-          <img src="./../ur/17.jpg" alt="" />
-          <img src="./../ur/18.jpg" alt="" />
+          <img src="./ur/1.jpg" alt="" />
+          <img src="./ur/2.jpg" alt="" />
+          <img src="./ur/3.jpg" alt="" />
+          <img src="./ur/4.jpg" alt="" />
+          <img src="./ur/5.jpg" alt="" />
+          <img src="./ur/6.jpg" alt="" />
+          <img src="./ur/8.jpg" alt="" />
+          <img src="./ur/7.jpg" alt="" />
+          <img src="./ur/9.jpg" alt="" />
+          <img src="./ur/10.jpg" alt="" />
+          <img src="./ur/11.jpg" alt="" />
+          <img src="./ur/12.jpg" alt="" />
+          <img src="./ur/13.jpg" alt="" />
+          <img src="./ur/14.jpg" alt="" />
+          <img src="./ur/15.jpg" alt="" />
+          <img src="./ur/16.jpg" alt="" />
+          <img src="./ur/17.jpg" alt="" />
+          <img src="./ur/18.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -105,7 +105,7 @@
         <p id="get">GET IN TOUCH</p>
         <div class="get">
           <div>
-            <img src="./..//ur/get.jpg" alt="" />
+            <img src="./ur/get.jpg" alt="" />
             <p class="mp">Cost-effective</p>
             <p>
               At a fraction of the cost of traditional construction, our pre-fab
@@ -114,7 +114,7 @@
             </p>
           </div>
           <div>
-            <img src="./..//ur/get1.jpg" alt="" />
+            <img src="./ur/get1.jpg" alt="" />
             <p class="mp">Cost-effective</p>
             <p>
               At a fraction of the cost of traditional construction, our pre-fab
@@ -123,7 +123,7 @@
             </p>
           </div>
           <div>
-            <img src="./..//ur/get2.png" alt="" />
+            <img src="./ur/get2.png" alt="" />
             <p class="mp">Cost-effective</p>
             <p>
               At a fraction of the cost of traditional construction, our pre-fab
@@ -139,15 +139,15 @@
       <div class="reviews">
         <div class="container">
           <div>
-            <img src="./../ur/w1.svg" alt="" />
+            <img src="./ur/w1.svg" alt="" />
             <p>“We can now have meetings in peace.”</p>
-            <img src="./../ur/w1.svg" alt="" /> <br />
-            <img src="./../ur/w2.svg" alt="" />
+            <img src="./ur/w1.svg" alt="" /> <br />
+            <img src="./ur/w2.svg" alt="" />
             <p>“Amazing private space to get work done.”</p>
-            <img src="./../ur/w1.svg" alt="" /> <br />
-            <img src="./../ur/w3.svg" alt="" />
+            <img src="./ur/w1.svg" alt="" /> <br />
+            <img src="./ur/w3.svg" alt="" />
             <p>“Our booths are in constant use.”</p>
-            <img src="./../ur/w4.svg" alt="" />
+            <img src="./ur/w4.svg" alt="" />
             <p id="read">READ MORE REVIEWS</p>
           </div>
         </div>
@@ -168,7 +168,7 @@
     <section class="pictures">
       <div class="top">
         <div class="left">
-          <img src="./../ur/big.svg" alt="" />
+          <img src="./ur/big.svg" alt="" />
         </div>
         <div class="right">
           <h1>We sell direct.</h1>
@@ -188,12 +188,12 @@
                    enable a better working environment for everyone.</p>
           </div>
           <div class="right">
-              <img src="./../ur/big1.svg" alt="">
+              <img src="./ur/big1.svg" alt="">
           </div>
       </div>
       <div class="bottom">
           <div class="left">
-              <img src="./../ur/big2.svg" alt="" style="width:590px;">
+              <img src="./ur/big2.svg" alt="" style="width:590px;">
           </div>
           <div class="right">
               <h1>We design sustainably.</h1>
@@ -216,15 +216,15 @@
             <h1>100 day risk-free trial</h1>
             <div class="all">
                 <div class="first">
-                    <img src="./../ur/g1.svg" alt="">
+                    <img src="./ur/g1.svg" alt="">
                     <p>FREE SHIPPING</p>
                 </div>
                 <div class="second">
-                    <img src="./../ur/g2.svg" alt="">
+                    <img src="./ur/g2.svg" alt="">
                     <p>PLUG & PLAY</p>
                 </div>
                 <div class="three">
-                    <img src="./../ur/g3.svg" alt="">
+                    <img src="./ur/g3.svg" alt="">
                     <p>FREE RETURNS</p>
                 </div>
             </div>
@@ -238,7 +238,7 @@
     <footer class="footer">
         <div class="foo">
           <div class="one">
-            <img src="./../ur/one.svg" alt="">
+            <img src="./ur/one.svg" alt="">
           </div>
           <div class="twoo">
            <p>
@@ -292,10 +292,10 @@
             </p>
             <br>
             <div>
-              <img src="./../ur/svg1.svg" alt="">
-              <img src="./../ur/svg2.svg" alt="">
-              <img src="./../ur/svg3.svg" alt="">
-              <img src="./../ur/svg4.svg" alt="">
+              <img src="./ur/svg1.svg" alt="">
+              <img src="./ur/svg2.svg" alt="">
+              <img src="./ur/svg3.svg" alt="">
+              <img src="./ur/svg4.svg" alt="">
             </div>
           </div>
           <div class="five">
@@ -305,7 +305,7 @@
               <br>
               <input type="">
               <p id="re">United States</p>
-              <img src="./../ur/svg5.svg" alt="">
+              <img src="./ur/svg5.svg" alt="">
               <p id="gh">
                 Yes. I would like to receive marketing communications<br>
                  from ROOM about product updates and special offers.<br>
@@ -317,7 +317,7 @@
               </p>
           </div>
           <div class="six">
-             <img src="./../ur/svg7.svg" alt="">
+             <img src="./ur/svg7.svg" alt="">
           </div>
         </div>
     </footer>
